terminacion del fronted de bebidas

--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="estilos.css">
-	<title>Sitio de peliculas</title>
+	<title>Sitio de bebidas</title>
 </head>
 <body>
     
-    <button type="button" id="miBoton"> preciona</button>
-
+    <div class="paginacion">
+        <button  id="miBoton"> ver productos disponibles</button>
+	</div>
 	<div class="contenedor" id="contenedor">
 
+            
 
     </div>
 
 	<div class="paginacion">
-		<button id="btnAnterior">Anterior</button>
-		<button id="btnSiguiente">Siguiente</button>
 	</div>
-
+<a style="color: red;" href=""></a>
 	<script src="js.js"></script>
+    <script src="compra.js"></script>
 </body>
 </html>
